{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 147,
  "lineage": "05f5a9ed-bf6b-83c5-0f63-d7c0112604fe",
  "resources": [
    {
      "module": "module.production",
      "mode": "managed",
      "type": "aws_elb",
      "name": "application",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:538130398803:loadbalancer/production-app-elb",
            "availability_zones": [
              "eu-west-2a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "production-app-elb-1614856992.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:5000/api",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "production-app-elb",
            "idle_timeout": 400,
            "instances": [
              "i-062165bff7f1044cd",
              "i-0fbef8b6214fce2f7"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "production-app-elb",
            "security_groups": [
              "sg-0c602e5f1d1d249af"
            ],
            "source_security_group": "538130398803/default_elb_2ca97ffb-44c1-3ba1-a37b-d6e198425522",
            "source_security_group_id": "sg-0c602e5f1d1d249af",
            "subnets": [
              "subnet-1ef17f64"
            ],
            "tags": {
              "Name": "production-elb"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_key_pair.adminkeypair",
            "module.production.aws_instance.application",
            "module.production.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "aws_elb",
      "name": "application_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:538130398803:loadbalancer/production-app-api-elb",
            "availability_zones": [
              "eu-west-2a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "production-app-api-elb-804589129.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/api",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "production-app-api-elb",
            "idle_timeout": 400,
            "instances": [
              "i-062165bff7f1044cd",
              "i-0fbef8b6214fce2f7"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 5000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "production-app-api-elb",
            "security_groups": [
              "sg-0c602e5f1d1d249af"
            ],
            "source_security_group": "538130398803/default_elb_2ca97ffb-44c1-3ba1-a37b-d6e198425522",
            "source_security_group_id": "sg-0c602e5f1d1d249af",
            "subnets": [
              "subnet-1ef17f64"
            ],
            "tags": {
              "Name": "production-elb-api"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_key_pair.adminkeypair",
            "module.production.aws_instance.application",
            "module.production.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f333ab822d8abf05",
            "arn": "arn:aws:ec2:eu-west-2:538130398803:instance/i-0fbef8b6214fce2f7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbef8b6214fce2f7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adminkeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-09576f3076e49e966",
            "private_dns": "ip-172-31-26-11.eu-west-2.compute.internal",
            "private_ip": "172.31.26.11",
            "public_dns": "ec2-18-132-195-42.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.195.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-059957dcec61be562",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "production-application"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1ef17f64",
            "tags": {
              "Name": "production-application",
              "component": "application",
              "stage": "production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0259ebad1a517d504"
            ]
          },
          "dependencies": [
            "aws_key_pair.adminkeypair",
            "module.production.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f333ab822d8abf05",
            "arn": "arn:aws:ec2:eu-west-2:538130398803:instance/i-062165bff7f1044cd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062165bff7f1044cd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adminkeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-053ab54318d16b3cb",
            "private_dns": "ip-172-31-44-186.eu-west-2.compute.internal",
            "private_ip": "172.31.44.186",
            "public_dns": "ec2-18-130-254-96.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.254.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c8cdd5a4b5f22f96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "production-application"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034a974f",
            "tags": {
              "Name": "production-application",
              "component": "application",
              "stage": "production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0259ebad1a517d504"
            ]
          },
          "dependencies": [
            "aws_key_pair.adminkeypair",
            "module.production.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdsSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538130398803:security-group/sg-0159ea29b2c8b3f4b",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0159ea29b2c8b3f4b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "rds",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0259ebad1a517d504"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rdsSG",
            "name_prefix": null,
            "owner_id": "538130398803",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-1b592173"
          },
          "dependencies": [
            "module.production.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redisSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538130398803:security-group/sg-091ca26aee1a2e49a",
            "description": "Redis security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-091ca26aee1a2e49a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "rds",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0259ebad1a517d504"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redisSG",
            "name_prefix": null,
            "owner_id": "538130398803",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-1b592173"
          },
          "dependencies": [
            "module.production.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538130398803:security-group/sg-0259ebad1a517d504",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0259ebad1a517d504",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5050
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-application",
            "name_prefix": null,
            "owner_id": "538130398803",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-1b592173"
          }
        }
      ]
    }
  ]
}